--- a/todo-list-project/src/styles.css
+++ b/todo-list-project/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+  background-color: #75c0e0;
+  margin: 0;
+}
+html{
+  margin: 0;
+}
