--- a/todo-list-project/src/app/app.component.html
+++ b/todo-list-project/src/app/app.component.html
@@ -1,4 +1,3 @@
-
 <h1>TO DO LIST</h1>
 <div class="container-fluid">
   <div class="row">
@@ -13,14 +12,34 @@
         <li *ngFor="let p of projects;let i = index">
           <button (click)="selectProject(p.name)">{{p.name}}</button>
         </li>
+        <li>
+          <button (click)="addNewProject()" class="addProjectButton">Add project</button>
+        </li>
+        <li>
+          <ng-container *ngIf="isAddNewProject">
+            
+          </ng-container>
+        </li>
       </ul>
     </div>
     <div class="col-sm-10 toDos">
-      <ng-container *ngFor="let t of todos; let i = index">
-        <div *ngIf="(t.project.name == todoSelector) || (todoSelector == 'Home')" class="todo-container">
-          <p>{{t.title}}</p>
+      <ng-container *ngFor="let t of todos; let i = index" >
+        <ng-container *ngIf="!t.isEditing">
+        <div *ngIf="(t.project.name == todoSelector) || (todoSelector == 'Home') || (todoSelector == 'Today' && isToday(t.date)) || (todoSelector == 'Week' && isWeek(t.date))" class="todo-container">
+          <h4>{{t.title}}</h4>
           <p>{{t.details}}</p>
+          <p>{{t.date.toLocaleDateString('en-US', {weekday: 'long'})}} {{t.date.getDate()}}.{{t.date.getMonth()}}.{{t.date.getFullYear()}}.</p>
+          <button (click)="editTodo(i)" class="noTransition">Edit</button>
         </div>
+        </ng-container>
+        <ng-container *ngIf="t.isEditing">
+          <div *ngIf="(t.project.name == todoSelector) || (todoSelector == 'Home') || (todoSelector == 'Today' && isToday(t.date)) || (todoSelector == 'Week' && isWeek(t.date))" class="todo-container">
+            <h4>{{t.title}}</h4>
+            <textarea class="editBox" [(ngModel)]="t.details">{{t.details}}</textarea>
+            <p>{{t.date.toLocaleDateString('en-US', {weekday: 'long'})}} {{t.date.getDate()}}.{{t.date.getMonth()}}.{{t.date.getFullYear()}}.</p>
+            <button (click)="saveEdit(i)" class="noTransition">Save</button>
+          </div>
+        </ng-container>
       </ng-container>
     </div>
   </div>
