--- a/todo-list-project/src/app/app.component.html
+++ b/todo-list-project/src/app/app.component.html
@@ -17,7 +17,12 @@
         </li>
         <li>
           <ng-container *ngIf="isAddNewProject">
-            
+            <div>
+              <label for="title">Title:</label>
+              <textarea [(ngModel)]="newProject.name" id="title" cols="16" rows="1"></textarea>
+              <button class="confirm" (click)="saveProject()" [disabled]="!newProject.name">Confirm</button>
+              <button class="confirm" (click)="cancleProject()">Cancle</button>
+            </div>
           </ng-container>
         </li>
       </ul>
@@ -25,7 +30,7 @@
     <div class="col-sm-10 toDos">
       <ng-container *ngFor="let t of todos; let i = index" >
         <ng-container *ngIf="!t.isEditing">
-        <div *ngIf="(t.project.name == todoSelector) || (todoSelector == 'Home') || (todoSelector == 'Today' && isToday(t.date)) || (todoSelector == 'Week' && isWeek(t.date))" class="todo-container">
+        <div *ngIf="(t.project.name == todoSelector) || (todoSelector == 'Home') || (todoSelector == 'Today' && isToday(t.date)) || (todoSelector == 'Week' && isWeek(t.date))" class="todo-container" [ngClass]="{'priority-high' : t.priority == 'High', 'priority-medium' : t.priority == 'Medium', 'priority-low' : t.priority == 'Low'}">
           <h4>{{t.title}}</h4>
           <p>{{t.details}}</p>
           <p>{{t.date.toLocaleDateString('en-US', {weekday: 'long'})}} {{t.date.getDate()}}.{{t.date.getMonth()}}.{{t.date.getFullYear()}}.</p>
@@ -41,6 +46,74 @@
           </div>
         </ng-container>
       </ng-container>
+      <div class="add-new-todo-container">
+        <ng-container *ngIf="!isAddNewTodo">
+        <button class="addProjectButton alignLeft" (click)="addNewTodo()">Add a To do!</button>
+        </ng-container>
+        <ng-container *ngIf="isAddNewTodo">
+          <!-- To-do Title -->
+          <label for="todo-title">Title:</label>
+          <input
+            type="text"
+            id="todo-title"
+            [(ngModel)]="newTodo.title"
+            name="title"
+            placeholder="Enter the title"
+            required />
+
+          <!-- To-do Details -->
+          <label for="todo-details">Details:</label>
+          <textarea
+            id="todo-details"
+            [(ngModel)]="newTodo.details"
+            name="details"
+            rows="4"
+            placeholder="Enter the details">
+      </textarea>
+
+          <!-- To-do Date -->
+          <label for="todo-date">Due Date:</label>
+          <input
+            type="date"
+            id="todo-date"
+            [(ngModel)]="newTodo.date"
+            name="date"
+            required />
+
+          <!-- To-do Priority -->
+          <fieldset>
+            <legend>Priority:</legend>
+            <label>
+              <input
+                type="radio"
+                [(ngModel)]="newTodo.priority"
+                name="priority"
+                value="High"
+                required /> High
+            </label>
+            <label>
+              <input
+                type="radio"
+                [(ngModel)]="newTodo.priority"
+                name="priority"
+                value="Medium" /> Medium
+            </label>
+            <label>
+              <input
+                type="radio"
+                [(ngModel)]="newTodo.priority"
+                name="priority"
+                value="Low" /> Low
+            </label>
+          </fieldset>
+
+          <!-- Action Buttons -->
+          <div class="button-group">
+            <button class="confirm" type="button" (click)="saveTodo()">Save</button>
+            <button class="cancel" type="button" (click)="cancelTodo()">Cancel</button>
+          </div>
+        </ng-container>
+      </div>
     </div>
   </div>
   <div class="row">
