add todo function

--- a/todo-list-project/src/app/app.component.css
+++ b/todo-list-project/src/app/app.component.css
@@ -115,3 +115,7 @@ transition: all 0.3s ease; /* Smooth transitions */
 .alignLeft{
   align-self: flex-start;
 }
+
+.todo-date{
+  max-width: 100px;
+}
